--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "author": "Darragh",
   "dependencies": {
     "discord.io": "github:woor/discord.io#gateway_v6",
-    "winston": "^2.3.1"
+    "winston": "^2.3.1",
+    "markovchain": "^1.0.2",
+    "request": "^2.87.0"
   }
 }
