--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "posbot",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Positivity Bot",
   "main": "bot.js",
   "author": "Darragh",
   "dependencies": {
-    "discord.io": "github:woor/discord.io#gateway_v6",
+    "discord.io": "izy521/discord.io",
     "winston": "^2.3.1",
     "markovchain": "^1.0.2",
-    "request": "^2.87.0"
+    "request": "^2.87.0",
+    "node-schedule": "^1.3.2"
   }
 }
