Posbot 2.0 Switched from discord.io to Eris Switched from var to let and const Removed Quote, Ranks and Werewolf functions Disabled RPG function pending updates

--- a/markov/config.json
+++ b/markov/config.json
@@ -1,5 +1,6 @@
 {
-    "bot": "<@348179384580177922>",
+    "bot": "503939825833869313",
+    "role": "&503940895897288714",
     "chance": 50,
     "start": 0
 }
