--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "posbot",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Positivity Bot",
   "main": "bot.js",
   "author": "Darragh",
   "dependencies": {
-    "discord.io": "izy521/discord.io",
-    "winston": "^2.3.1",
+    "eris": "^0.15.1",
     "markovchain": "^1.0.2",
+    "node-schedule": "^1.3.2",
     "request": "^2.87.0",
-    "node-schedule": "^1.3.2"
+    "winston": "^2.3.1"
+  },
+  "devDependencies": {
+    "eslint": "^7.27.0"
   }
 }
