Update markov generator Reply to @s Fix issue with including @ in markov generation

--- a/markov/config.json
+++ b/markov/config.json
@@ -1,6 +1,6 @@
 {
-    "bot": "503939825833869313",
-    "role": "&503940895897288714",
+    "bot": "<bot-id>",
+    "role": "<bot-role-id>",
     "chance": 50,
     "start": 0
 }
